src/mongo/db/query/query_tester/tests/selfTests/negativeTests/run_tests/test.coll
{value: 1}
{_id: 1, value: 1}

{_id: 0, value: "a"}
{_id: 1, value: "b"}
